# scuffle

./: .bazelignore  .bazelrc  .dockerignore  .editorconfig  .envrc  .git-blame-ignore-revs  .gitattributes  .gitconfig  .gitignore  BUILD  BUILD.bazel  CONTRIBUTING.md  Cargo.toml  Justfile  MODULE.bazel  README.md  bazel-tasks.md  buf.yaml  cargo_targets.bzl  codecov.yml  deny.toml  docker-compose.yaml  dprint.json  flake.nix  multitool.lock.json  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  release-plz.toml  turbo.jsonc  vercel.json
bazel/toolchains/: BUILD  assets.MODULE.bazel  ffmpeg.MODULE.bazel  llvm.MODULE.bazel  rust.MODULE.bazel
bazel/toolchains/ffmpeg/: BUILD
bazel/toolchains/llvm/: BUILD
cloud/big-bin/: BUILD.bazel  Cargo.toml  README.md
cloud/big-bin/src/: config.rs  dataloaders.rs  main.rs
cloud/big-bin/src/dataloaders/: organizations.rs  users.rs
cloud/core/: BUILD  BUILD.bazel  Cargo.toml  README.md  diesel.toml  static_policies.cedar  static_policies.cedarschema
cloud/core/auth/: BUILD.bazel  Cargo.toml
cloud/core/auth/src/: lib.rs
cloud/core/cedar/: BUILD.bazel  Cargo.toml  README.md  build.rs
cloud/core/cedar/src/: entity_type_name.rs  lib.rs  macros.rs  models.rs
cloud/core/db-types/: BUILD.bazel  Cargo.toml  README.md
cloud/core/db-types/src/: cedar.rs  id.rs  lib.rs  models.rs  schema.patch  schema.rs
cloud/core/emails/: BUILD.bazel  Cargo.toml  README.md  emails_render.bzl  render_preview.bzl
cloud/core/emails/src/: lib.rs
cloud/core/migrations/2025-06-08-200849_schema/: down.sql  up.sql
cloud/core/proto/: BUILD.bazel  Cargo.toml  build.rs  lib.rs  package.json
cloud/core/src/: auth_session.rs  captcha.rs  cedar.rs  chrono_ext.rs  common.rs  config.rs  emails.rs  geoip.rs  google_api.rs  http_ext.rs  id.rs  lib.rs  main.rs  middleware.rs  models.rs  operations.rs  prost_ext.rs  result_ext.rs  schema.patch  schema.rs  service.rs  services.rs  session_crypto.rs  std_ext.rs  totp.rs  utils.rs  webauthn.rs
cloud/core/src/captcha/: turnstile.rs
cloud/core/src/dataloaders/: mod.rs  organizations.rs  users.rs
cloud/core/src/middleware/: auth.rs  ip_address.rs  mod.rs
cloud/core/src/models/: crypto.rs  mfa.rs  mod.rs  organizations.rs  sessions.rs  users.rs
cloud/core/src/operations/: login.rs  mod.rs  organization_invitations.rs  organizations.rs  register.rs  user_session_requests.rs  user_sessions.rs  users.rs
cloud/core/traits/: BUILD.bazel  Cargo.toml  README.md
cloud/dashboard/: .env  BUILD.bazel  eslint.config.mjs  package.json  svelte.config.js  vercel.json  vite.config.ts
cloud/dashboard/src/: app.d.ts  app.html  hooks.client.ts
cloud/dashboard/static/: mockServiceWorker.js
cloud/docs/: BUILD.bazel  package.json  tsconfig.json
cloud/email/: BUILD.bazel  Cargo.toml  README.md
cloud/email/proto/: BUILD.bazel  Cargo.toml  build.rs  lib.rs  package.json
cloud/email/src/: aws_ses.rs  email_builder.rs  lib.rs  services.rs
cloud/email/traits/: BUILD.bazel  Cargo.toml  README.md
cloud/ext-traits/: BUILD.bazel  Cargo.toml  README.md
cloud/ext-traits/src/: chrono_ext.rs  http_ext.rs  lib.rs  std_ext.rs
cloud/geo-ip/: BUILD.bazel  Cargo.toml  README.md
cloud/geo-ip/src/: http_ext.rs  lib.rs  middleware.rs  resolver.rs
cloud/id/: BUILD.bazel  Cargo.toml  README.md
cloud/id/src/: lib.rs
cloud/ingest/: BUILD.bazel  Cargo.toml
cloud/ingest/src/: services.rs
cloud/ingest/traits/: README.md
cloud/proto/: BUILD  BUILD.bazel  Cargo.toml  Justfile  README.md  build.rs  package.json
cloud/proto/src/: lib.rs
cloud/proto/ts/: .swcrc  BUILD.bazel  Justfile  generated  package.json  tsconfig.json
cloud/redis-module/: BUILD.bazel  Cargo.toml  README.md
cloud/redis-module/src/: lib.rs  quota.rs  utils.rs
crates/aac/: BUILD  BUILD.bazel  CHANGELOG.md  Cargo.toml  README.md
crates/aac/src/: lib.rs
crates/amf0/: BUILD  BUILD.bazel  CHANGELOG.md  Cargo.toml  README.md
crates/amf0/src/: decoder.rs  encoder.rs  lib.rs  map.rs  object.rs  ser.rs  value.rs
crates/av1/: BUILD  BUILD.bazel  CHANGELOG.md  Cargo.toml  README.md
crates/av1/src/: boxes.rs  config.rs  lib.rs
crates/bootstrap/: BUILD  BUILD.bazel  CHANGELOG.md  Cargo.toml  README.md
crates/bootstrap-telemetry/: BUILD  BUILD.bazel  Cargo.toml  README.md
crates/bootstrap-telemetry/src/: lib.rs
crates/bootstrap/derive/: BUILD  BUILD.bazel  Cargo.toml  README.md
crates/bootstrap/examples/: Cargo.toml
crates/bootstrap/src/: lib.rs  service.rs
crates/bootstrap/telemetry/: CHANGELOG.md  Cargo.toml  README.md
docs/: BUILD  BUILD.bazel  constants.ts  docusaurus.config.ts  package.json  sidebars.ts
docs/docs/tutorial-basics/: create-a-document.md
docs/docs/tutorial-extras/: manage-docs-versions.md  translate-your-site.md
docs/src/pages/: index.tsx
tools/: BUILD  BUILD.bazel
tools/bazel-diff/: BUILD.bazel
tools/buf/: BUILD  BUILD.bazel
tools/buildifier/: BUILD  BUILD.bazel
tools/cargo/: BUILD  BUILD.bazel
tools/cargo/clippy/: BUILD  BUILD.bazel  Cargo.toml  README.md
tools/cargo/deny/: BUILD  BUILD.bazel  Cargo.toml  README.md
tools/cargo/fmt/: BUILD
tools/cargo/insta/: BUILD  BUILD.bazel
tools/cargo/sync-rdme/: BUILD  Cargo.toml
tools/cargo/sync-readme/: BUILD  BUILD.bazel  Cargo.toml  README.md
tools/cedar/: BUILD.bazel
tools/diesel/: BUILD.bazel
tools/diesel-schema/: BUILD.bazel  Cargo.toml  README.md
tools/diesel-schema/src/: main.rs
tools/dprint/: BUILD  BUILD.bazel
tools/ffmpeg/: BUILD  BUILD.bazel
tools/ibazel/: BUILD.bazel
tools/just/: BUILD  BUILD.bazel
tools/mergiraf/: BUILD
tools/miniserve/: BUILD  BUILD.bazel
tools/node/: BUILD.bazel
tools/pnpm/: BUILD.bazel
tools/protoc/: BUILD.bazel  alias.bzl
tools/rust-analyzer/: BUILD  BUILD.bazel
tools/scripts/: README.md  bazel  bazel-diff  buf  buildifier  cargo  cargo-deny  cargo-insta  dprint  ffmpeg  ffprobe  ibazel  just  mergiraf  miniserve  node  pnpm  protoc  rust-analyzer  shfmt  valgrind
tools/scripts/utils/: tool.sh
tools/shfmt/: BUILD.bazel
tools/valgrind/: BUILD  BUILD.bazel  dummy.sh
(+1524 files in other folders)
