load("@npm//:defs.bzl", "npm_link_all_packages")

exports_files([
    "Cargo.toml",
    "Cargo.lock",
    "rustfmt.toml",
    ".config/nextest.toml",
    "deny.toml",
])

npm_link_all_packages()

alias(
    name = "bazel_env",
    actual = "//tools:bazel_env",
    tags = ["manual"],
    visibility = ["//visibility:public"],
)
