[workspace]

members = [
  "crates/aac",
  "crates/amf0",
  "crates/av1",
  "crates/batching",
  "crates/bootstrap",
  "crates/bootstrap/derive",
  "crates/bootstrap-telemetry",
  "crates/bytes-util",
  "crates/context",
  "crates/expgolomb",
  "crates/ffmpeg",
  "crates/flv",
  "crates/future-ext",
  "crates/h264",
  "crates/h265",
  "crates/http",
  "crates/metrics",
  "crates/metrics/derive",
  "crates/mp4",
  "crates/nutype-enum",
  "crates/postcompile",
  "crates/pprof",
  "crates/rtmp",
  "crates/settings",
  "crates/signal",
  "crates/transmuxer",
  "crates/tinc",
  "crates/tinc/cel",
  "crates/tinc/pb-prost",
  "crates/tinc/build",
  "crates/tinc/derive",
  "crates/tinc/integration",
  "crates/openapiv3_1",
  "crates/changelog",
  "cloud/proto",
  "cloud/core",
  "dev-tools/xtask",
  "tools/cargo/deny",
  "tools/cargo/clippy",
  "tools/cargo/sync-rdme",
  "build/utils/protobuf",
  "build/utils/collect_args",
  "build/utils/nextest_runner",
  "build/utils/process_wrapper",
  "build/utils/clippy",
  "build/utils/cargo_metadata",
  "build/utils/rust_doctest_builder",
  "build/utils/rust_doctest_runner",
  "build/utils/rust_doctest_common",
  "build/utils/rustdoc_merger",
  "build/utils/rustdoc_wrapper",
]

resolver = "3"

[workspace.metadata.xtask.release.packages]
tinc = "0.1.6"
tinc-build = "0.1.6"
tinc-cel = "0.1.6"
tinc-derive = "0.1.6"
tinc-pb-prost = "0.1.6"
postcompile = "0.3.2"
scuffle-batching = "0.1.5"
scuffle-bootstrap = "0.1.6"
scuffle-bootstrap-derive = "0.1.6"
scuffle-bootstrap-telemetry = "0.3.0"
scuffle-changelog = "0.1.1"
scuffle-ffmpeg = "0.3.5"
scuffle-metrics = "0.4.0"
scuffle-metrics-derive = "0.4.0"
scuffle-pprof = "0.2.0"
scuffle-amf0 = "0.2.4"
scuffle-mp4 = "0.1.5"

[profile.release-debug]
inherits = "release"
debug = true

[patch.crates-io]
rusty_ffmpeg = { git = "https://github.com/TroyKomodo/rusty_ffmpeg.git", rev = "cca349e5cc0764f00112c6fc6066f831c601a9b9"}
