[workspace]

members = [
  "crates/aac",
  "crates/amf0",
  "crates/av1",
  "crates/batching",
  "crates/bootstrap",
  "crates/bootstrap/derive",
  "crates/bootstrap-telemetry",
  "crates/bytes-util",
  "crates/context",
  "crates/expgolomb",
  "crates/ffmpeg",
  "crates/flv",
  "crates/future-ext",
  "crates/h264",
  "crates/h265",
  "crates/http",
  "crates/metrics",
  "crates/metrics/derive",
  "crates/mp4",
  "crates/nutype_enum",
  "crates/postcompile",
  "crates/pprof",
  "crates/rtmp",
  "crates/settings",
  "crates/signal",
  "crates/transmuxer",
  "crates/workspace-hack",
  "dev-tools/xtask",
  "crates/tinc",
  "crates/tinc/cel",
  "crates/tinc/pb-prost",
  "crates/tinc/build",
  "crates/tinc/derive",
  "crates/tinc/integration",
  "crates/openapiv3_1",
  "crates/changelog",
  "cloud/proto",
  "cloud/core",
]

resolver = "3"

[workspace.dependencies]
scuffle-workspace-hack = "0.1.0"

[workspace.metadata.xtask.release.packages]
tinc = "0.2.0"
tinc-build = "0.2.0"
tinc-cel = "0.2.0"
tinc-derive = "0.2.0"
tinc-pb-prost = "0.2.0"
postcompile = "0.3.3"
scuffle-batching = "0.1.6"
scuffle-bootstrap = "0.1.7"
scuffle-bootstrap-derive = "0.1.7"
scuffle-bootstrap-telemetry = "0.3.0"
scuffle-changelog = "0.1.1"
scuffle-ffmpeg = "0.3.5"
scuffle-metrics = "0.4.2"
scuffle-metrics-derive = "0.4.2"
scuffle-pprof = "0.2.0"
scuffle-amf0 = "0.2.4"
scuffle-mp4 = "0.1.5"
scuffle-bytes-util = "0.1.5"
scuffle-expgolomb = "0.1.5"

[profile.release-debug]
inherits = "release"
debug = true

[patch.crates-io.scuffle-workspace-hack]
path = "crates/workspace-hack"
