[workspace]

members = [
  "crates/aac",
  "crates/amf0",
  "crates/av1",
  "crates/batching",
  "crates/bootstrap",
  "crates/bootstrap/derive",
  "crates/bootstrap-telemetry",
  "crates/bytes-util",
  "crates/context",
  "crates/expgolomb",
  "crates/ffmpeg",
  "crates/flv",
  "crates/future-ext",
  "crates/h264",
  "crates/h265",
  "crates/http",
  "crates/metrics",
  "crates/metrics/derive",
  "crates/mp4",
  "crates/nutype-enum",
  "crates/postcompile",
  "crates/pprof",
  "crates/rtmp",
  "crates/settings",
  "crates/signal",
  "crates/transmuxer",
  "crates/tinc",
  "crates/tinc/cel",
  "crates/tinc/pb-prost",
  "crates/tinc/build",
  "crates/tinc/derive",
  "crates/tinc/integration",
  "crates/openapiv3_1",
  "crates/changelog",
  "cloud/proto",
  "cloud/core",
  "dev-tools/xtask",
  "tools/cargo/clippy",
  "tools/cargo/sync-readme",
  "build/utils/protobuf",
  "build/utils/rust/test_runner",
  "build/utils/rust/clippy",
  "build/utils/rust/doc/test/builder",
  "build/utils/rust/doc/test/runner",
  "build/utils/rust/doc/test/common",
  "build/utils/rust/doc/merger",
  "build/utils/rust/doc/wrapper",
  "build/utils/rust/sync_readme",
  "build/utils/rust/analyzer/check",
  "build/utils/rust/analyzer/discover",
  "build/utils/rust/sync_readme/common",
  "build/utils/rust/sync_readme/test_runner",
]

resolver = "3"

[workspace.metadata.xtask.release.packages]
tinc = "0.2.0"
tinc-build = "0.2.0"
tinc-cel = "0.2.0"
tinc-derive = "0.2.0"
tinc-pb-prost = "0.2.0"
postcompile = "0.3.3"
scuffle-batching = "0.1.6"
scuffle-bootstrap = "0.1.7"
scuffle-bootstrap-derive = "0.1.7"
scuffle-bootstrap-telemetry = "0.3.0"
scuffle-changelog = "0.1.1"
scuffle-ffmpeg = "0.3.5"
scuffle-metrics = "0.4.2"
scuffle-metrics-derive = "0.4.2"
scuffle-pprof = "0.2.0"
scuffle-amf0 = "0.2.4"
scuffle-mp4 = "0.1.5"
scuffle-bytes-util = "0.1.5"
scuffle-expgolomb = "0.1.5"

[profile.release-debug]
inherits = "release"
debug = true

[patch.crates-io]
rusty_ffmpeg = { git = "https://github.com/TroyKomodo/rusty_ffmpeg.git", rev = "cca349e5cc0764f00112c6fc6066f831c601a9b9"}
reqwest = { git = "https://github.com/TroyKomodo/reqwest.git", rev = "1b659fc2ec02363a04dcdc08d1989560ed5a5e7f" }
