module(
    name = "scuffle",
    version = "1.0",
)

bazel_dep(name = "bazel_skylib", version = "1.8.1")
bazel_dep(name = "rules_shell", version = "0.5.0")
bazel_dep(name = "platforms", version = "1.0.0")
bazel_dep(name = "rules_cc", version = "0.1.2")
bazel_dep(name = "aspect_bazel_lib", version = "2.19.4")

include("//build/toolchains:protobuf.MODULE.bazel")

include("//build/toolchains:clang.MODULE.bazel")

include("//build/toolchains:rust.MODULE.bazel")

include("//build/toolchains:ffmpeg.MODULE.bazel")

include("//build/toolchains:assets.MODULE.bazel")
