module(
    name = "scuffle",
    version = "1.0",
)

bazel_dep(name = "bazel_skylib", version = "1.8.1")
bazel_dep(name = "rules_shell", version = "0.5.0")
bazel_dep(name = "platforms", version = "1.0.0")
bazel_dep(name = "rules_cc", version = "0.1.2")
bazel_dep(name = "aspect_bazel_lib", version = "2.19.4")
bazel_dep(name = "rules_python", version = "1.5.3")
bazel_dep(name = "rules_go", version = "0.57.0")

include("//misc/toolchains:protobuf.MODULE.bazel")

include("//misc/toolchains:clang.MODULE.bazel")

include("//misc/toolchains:rust.MODULE.bazel")

include("//misc/toolchains:ffmpeg.MODULE.bazel")

include("//misc/toolchains:valgrind.MODULE.bazel")

include("//misc/toolchains:assets.MODULE.bazel")
