module(
    name = "scuffle",
    version = "1.0",
)

bazel_dep(name = "bazel_skylib", version = "1.8.2")
bazel_dep(name = "rules_shell", version = "0.5.0")
bazel_dep(name = "platforms", version = "1.0.0")
bazel_dep(name = "rules_cc", version = "0.2.4")
bazel_dep(name = "aspect_bazel_lib", version = "2.21.1")
bazel_dep(name = "rules_python", version = "1.5.3")
bazel_dep(name = "rules_go", version = "0.57.0")
bazel_dep(name = "openssl", version = "3.3.1.bcr.7")
bazel_dep(name = "rules_java", version = "8.15.2")

include("//misc/toolchains:docker.MODULE.bazel")

include("//misc/toolchains:protobuf.MODULE.bazel")

include("//misc/toolchains:clang.MODULE.bazel")

include("//misc/toolchains:rust.MODULE.bazel")

include("//misc/toolchains:js.MODULE.bazel")

include("//misc/toolchains:ffmpeg.MODULE.bazel")

include("//misc/toolchains:ibazel.MODULE.bazel")

include("//misc/toolchains:shfmt.MODULE.bazel")

include("//misc/toolchains:bazel-diff.MODULE.bazel")

include("//misc/toolchains:valgrind.MODULE.bazel")

include("//misc/toolchains:assets.MODULE.bazel")
