load("//:cargo_targets.bzl", "cargo_targets")
load("//misc/utils/rust:rustdoc.bzl", "rustdoc", "rustdoc_merge")

rustdoc(
    name = "runfiles_doc",
    crate = "@rules_rust//rust/runfiles",
)

html_docs = cargo_targets(
    exclude = [
        "//tools/cargo/clippy",
        "//tools/cargo/sync-readme",
        "//misc/utils/rust/clippy",
    ],
    target = "{name}_doc",
) + [
    "//tools/cargo/clippy:fix_doc",
    "//tools/cargo/sync-readme:fix_doc",
    "//misc/utils/rust/clippy:test_runner_doc",
    ":runfiles_doc",
]

json_docs = cargo_targets(
    exclude = [
        "//tools/cargo/clippy",
        "//tools/cargo/sync-readme",
        "//misc/utils/rust/clippy",
    ],
    target = "{name}_doc_json",
) + [
    "//tools/cargo/clippy:fix_doc_json",
    "//tools/cargo/sync-readme:fix_doc_json",
    "//misc/utils/rust/clippy:test_runner_doc_json",
]

rustdoc_merge(
    name = "rustdoc",
    targets = html_docs + json_docs,
    visibility = ["//visibility:public"],
)
