bazel_dep(name = "rules_rust", version = "0.61.0")
git_override(
    module_name = "rules_rust",
    commit = "73d8c44ff851698ea72abbca87786e6e000939de",
    remote = "https://github.com/ScuffleCloud/rules_rust.git",
)
# local_path_override(
#     module_name = "rules_rust",
#     path = "../rules_rust",
# )

rust = use_extension(
    "@rules_rust//rust:extensions.bzl",
    "rust",
)
rust.toolchain(
    edition = "2024",
    extra_target_triples = [
        "wasm32-unknown-unknown",
    ],
    versions = ["1.88.0"],
)
use_repo(
    rust,
    "rust_toolchains",
)

register_toolchains("@rust_toolchains//:all")

vendored = use_extension("//bazel:vendor_extensions.bzl", "vendored")
use_repo(
    vendored,
    "crates_vendor",
    "crates_vendor__anyhow-1.0.98",
    "crates_vendor__arc-swap-1.7.1",
    "crates_vendor__axum-0.8.4",
    "crates_vendor__base64-0.22.1",
    "crates_vendor__bitflags-2.9.1",
    "crates_vendor__bitmask-enum-2.2.5",
    "crates_vendor__bon-3.6.4",
    "crates_vendor__byteorder-1.5.0",
    "crates_vendor__bytes-1.10.1",
    "crates_vendor__bytestring-1.4.0",
    "crates_vendor__camino-1.1.10",
    "crates_vendor__cargo-manifest-0.19.1",
    "crates_vendor__cargo-platform-0.2.0",
    "crates_vendor__cargo_metadata-0.20.0",
    "crates_vendor__cel-parser-0.8.1",
    "crates_vendor__chrono-0.4.41",
    "crates_vendor__clap-4.5.40",
    "crates_vendor__config-0.15.11",
    "crates_vendor__convert_case-0.8.0",
    "crates_vendor__criterion-0.6.0",
    "crates_vendor__crossbeam-channel-0.5.15",
    "crates_vendor__darling-0.20.11",
    "crates_vendor__document-features-0.2.11",
    "crates_vendor__email_address-0.2.9",
    "crates_vendor__fixed-1.29.0",
    "crates_vendor__flate2-1.1.2",
    "crates_vendor__float-cmp-0.10.0",
    "crates_vendor__fmtools-0.1.2",
    "crates_vendor__futures-0.3.31",
    "crates_vendor__futures-lite-2.6.0",
    "crates_vendor__glob-0.3.2",
    "crates_vendor__guppy-0.17.19",
    "crates_vendor__h3-0.0.8",
    "crates_vendor__h3-quinn-0.0.10",
    "crates_vendor__heck-0.5.0",
    "crates_vendor__hex-0.4.3",
    "crates_vendor__hmac-0.12.1",
    "crates_vendor__home-0.5.11",
    "crates_vendor__http-1.3.1",
    "crates_vendor__http-body-1.0.1",
    "crates_vendor__http-body-util-0.1.3",
    "crates_vendor__hyper-1.6.0",
    "crates_vendor__hyper-util-0.1.14",
    "crates_vendor__indent_write-2.2.0",
    "crates_vendor__indexmap-2.10.0",
    "crates_vendor__insta-1.43.1",
    "crates_vendor__libc-0.2.174",
    "crates_vendor__linear-map-1.2.0",
    "crates_vendor__linkme-0.3.33",
    "crates_vendor__mediatype-0.20.0",
    "crates_vendor__minijinja-2.10.2",
    "crates_vendor__nextest-filtering-0.16.0",
    "crates_vendor__nextest-metadata-0.12.2",
    "crates_vendor__nextest-runner-0.82.0",
    "crates_vendor__num-derive-0.4.2",
    "crates_vendor__num-traits-0.2.19",
    "crates_vendor__num_cpus-1.17.0",
    "crates_vendor__opentelemetry-0.30.0",
    "crates_vendor__opentelemetry-appender-tracing-0.30.1",
    "crates_vendor__opentelemetry-stdout-0.30.0",
    "crates_vendor__opentelemetry_sdk-0.30.0",
    "crates_vendor__ordered-float-5.0.0",
    "crates_vendor__parking_lot-0.12.4",
    "crates_vendor__paste-1.0.15",
    "crates_vendor__pin-project-lite-0.2.16",
    "crates_vendor__pprof-0.15.0",
    "crates_vendor__prettyplease-0.2.35",
    "crates_vendor__proc-macro2-1.0.95",
    "crates_vendor__prometheus-client-0.23.1",
    "crates_vendor__prost-0.13.5",
    "crates_vendor__prost-build-0.13.5",
    "crates_vendor__prost-reflect-0.15.3",
    "crates_vendor__prost-types-0.13.5",
    "crates_vendor__querystring-1.1.0",
    "crates_vendor__quinn-0.11.8",
    "crates_vendor__quote-1.0.40",
    "crates_vendor__rand-0.9.1",
    "crates_vendor__regex-1.11.1",
    "crates_vendor__reqwest-0.12.20",
    "crates_vendor__runtime-format-0.1.3",
    "crates_vendor__rustls-0.23.28",
    "crates_vendor__rustls-pemfile-2.2.0",
    "crates_vendor__rusty_ffmpeg-0.16.3-ffmpeg.7.1",
    "crates_vendor__semver-1.0.26",
    "crates_vendor__serde-1.0.219",
    "crates_vendor__serde_derive-1.0.219",
    "crates_vendor__serde_json-1.0.140",
    "crates_vendor__serde_norway-0.9.42",
    "crates_vendor__serde_qs-0.15.0",
    "crates_vendor__serde_repr-0.1.20",
    "crates_vendor__sha2-0.10.9",
    "crates_vendor__smart-default-0.7.1",
    "crates_vendor__syn-2.0.104",
    "crates_vendor__target-triple-0.1.4",
    "crates_vendor__tempfile-3.20.0",
    "crates_vendor__thiserror-2.0.12",
    "crates_vendor__tokio-1.45.1",
    "crates_vendor__tokio-rustls-0.26.2",
    "crates_vendor__tokio-stream-0.1.17",
    "crates_vendor__tokio-test-0.4.4",
    "crates_vendor__tokio-util-0.7.15",
    "crates_vendor__toml-0.8.23",
    "crates_vendor__toml_edit-0.22.27",
    "crates_vendor__tonic-0.13.1",
    "crates_vendor__tonic-build-0.13.1",
    "crates_vendor__tonic-types-0.13.1",
    "crates_vendor__tower-0.5.2",
    "crates_vendor__tracing-0.1.41",
    "crates_vendor__tracing-opentelemetry-0.31.0",
    "crates_vendor__tracing-subscriber-0.3.19",
    "crates_vendor__tracing-test-0.2.5",
    "crates_vendor__url-2.5.4",
    "crates_vendor__uuid-1.17.0",
    "crates_vendor__va_list-0.2.1",
)
