load("//misc/utils/rust:manifest.bzl", "cargo_toml")
load("//misc/utils/rust:package.bzl", "scuffle_package")

cargo_toml()

deps = [
    "//crates/batching",
    "//crates/bootstrap",
    "//crates/bootstrap-telemetry",
    "//crates/context",
    "//crates/http",
    "//crates/settings",
    "//crates/signal",
    "//crates/tinc",
    "//cloud/ext-traits",
    "//cloud/core/proto",
    "//cloud/email/proto",
    "//cloud/core/traits",
    "//cloud/core/emails",
    "//cloud/core/db-types",
    "//cloud/geo-ip",
]

aliases = {
    "//cloud/ext-traits": "ext_traits",
    "//cloud/core/proto": "core_pb",
    "//cloud/email/proto": "email_pb",
    "//cloud/geo-ip": "geo_ip",
    "//cloud/core/emails": "core_emails",
    "//cloud/core/traits": "core_traits",
    "//cloud/core/db-types": "core_db_types",
}

scuffle_package(
    aliases = aliases,
    crate_name = "scufflecloud-core",
    deps = deps,
)

scuffle_package(
    name = "bin",
    srcs = glob([
        "bin/standalone/**/*.rs",
    ]),
    aliases = aliases,
    crate_name = "scufflecloud-core-standalone",
    crate_type = "bin",
    readme = False,
    deps = deps + [":core"],
)
