[package]
name = "scufflecloud-core"
version = "0.1.0"
authors = ["Scuffle <opensource@scuffle.cloud>"]
edition = "2024"
license = "AGPL-3.0"
publish = false
readme = "README.md"
repository = "https://github.com/scufflecloud/scuffle"
description = "Authentication/Core server for scuffle.cloud"

[[bin]]
name = "scufflecloud-core"
path = "src/bin/standalone.rs"

[lints.rust]
unexpected_cfgs = { level = "warn", check-cfg = ['cfg(coverage_nightly)'] }

[dependencies]
anyhow = "1.0.98"
argon2 = { features = ["std"], version = "0.5.3" }
async-trait = "0.1.88"
axum = "0.8.4"
base64 = "0.22.1"
cedar-policy = "4.5.1"
chrono = "0.4.41"
derive_more = { features = ["display"], version = "2.0.1" }
diesel = { features = ["chrono", "network-address", "serde_json", "uuid"], version = "2.2.10" }
diesel-async = { features = ["async-connection-wrapper", "bb8", "postgres"], version = "0.6.1" }
fred = "10.1.0"
hmac = "0.12.1"
ipnetwork = { features = ["serde"], version = "0.21.1" }
pb = { package = "scufflecloud-proto", path = "../proto" }
pkcs8 = "0.10.2"
prost = "0.14.1"
rand = "0.8.5"
reqwest = { features = ["json", "rustls-tls"], version = "0.12.20" }
rsa = { features = ["sha2"], version = "0.9.8" }
sailfish = "0.10.0"
sailfish-macros = "0.10.0"
scuffle-bootstrap = { path = "../../crates/bootstrap", version = "0.1.7" }
scuffle-bootstrap-telemetry = { features = [
  "opentelemetry-logs",
  "opentelemetry-traces",
], path = "../../crates/bootstrap-telemetry", version = "0.3.0" }
scuffle-context = { path = "../../crates/context", version = "0.1.5" }
scuffle-http = { features = ["tracing"], path = "../../crates/http", version = "0.3.2" }
scuffle-settings = { features = [
  "all-formats",
  "bootstrap",
], path = "../../crates/settings", version = "0.1.4" }
scuffle-signal = { features = ["bootstrap"], path = "../../crates/signal", version = "0.3.3" }
serde = "1.0.219"
serde_derive = "1.0.219"
serde_json = "1.0.140"
sha2 = "0.10.9"
smart-default = "0.7.1"
thiserror = "2.0.12"
tinc = { path = "../../crates/tinc", version = "0.2.0" }
tonic = "0.14.1"
tonic-reflection = "0.14.1"
tonic-types = "0.14.1"
totp-rs = { features = ["otpauth", "qr"], version = "5.7.0" }
tower-http = { features = ["cors", "trace"], version = "0.6.6" }
tracing = "0.1.41"
tracing-subscriber = "0.3.19"
ulid = { features = ["uuid"], version = "1.2.1" }
url = "2.5.4"
urlencoding = "2.1.3"
utoipa-swagger-ui = { features = ["axum", "vendored"], version = "9.0.2" }
uuid = "1.17.0"
webauthn-rs = { features = ["danger-allow-state-serialisation"], version = "0.5.2" }

[package.metadata.sync-readme.badges]
docs-rs = false
crates-io = false
license = true
codecov = true
